<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/customborder"
    android:padding="8dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140dp"
            android:layout_height="140dp"

            android:layout_marginTop="4dp"
            android:contentDescription="@string/contact_image"
            android:src="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/detailedContactName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/contact_name"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/detailedContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/customborder"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/detailedContactNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/customborder"
            android:text="@string/phone_number_2" />

    </LinearLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:text="@string/btn"
        android:textSize="8sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/customborder"
            android:text="@string/e_mail" />

        <TextView
            android:id="@+id/email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/customborder"
            android:text="@string/e_mail_2" />

    </LinearLayout>
    <Button
        android:id="@+id/btn2"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:text="@string/btn"
        android:textSize="8sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:text="@string/description"/>

</LinearLayout>