<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBorder"
    app:cardElevation="4dp"
    app:cardCornerRadius="6dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:padding="6dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/contactImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/contact_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="274dp"
                android:layout_height="34dp"
                android:layout_margin="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textSize="30sp"
                android:text="@string/contact_name"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_phoneNumber"
                android:layout_width="274dp"
                android:layout_height="20dp"
                android:layout_margin="6dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:text="@string/contact_phone_number"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                app:layout_constraintVertical_bias="0.111" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>